# pypolyline

./: .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  Makefile  README.md  README.rst  appveyor.yml  benchmarks.py  dev-requirements.txt  manifest.in  pyproject.toml  release.py  setup.cfg  setup.py  upload  util.py
.github/: dependabot.yml
.github/workflows/: release.yml  wheels.yml
.libs/: libpolyline_ffi.dylib
benches/: benchmark_cgg.py  benchmark_flexpolyline.py  benchmark_python.py  benchmark_rust.py  output_stats_cgg  output_stats_python  output_stats_rust
ci/: before_deploy.sh  build_wheel.sh  osx_utils.sh  pre_install.py  pre_install.sh  script.sh
py_polyline/: native_numpy.py  util.py
py_polyline/test/: test.py
pypolyline/: cutil.c  cutil.cpp  cutil.html  cutil.pyx  header.h  native_numpy.py  pypolyline_p.pxd  util.py
pypolyline/test/: test.py
src/: _version.py
src/pypolyline/: cutil.pyx  util.py
test/: test_pypolyline.py
tests/: test_pypolyline.py
