[project]
name = "pypolyline"
dynamic = ["version", "readme"]
description = "Fast Google Polyline encoding and decoding using Rust FFI"
requires-python = ">=3.9"
dependencies = [
    "numpy >= 2.0.0",
]
authors = [{ name = "Stephan Hügel", email = "urschrei@gmail.com" }]
license = {file = "LICENSE.md"}
keywords = ["Geo", "Polyline"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Blue Oak Model License (BlueOak-1.0.0)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS"
    ]
[project.urls]
Repository = "https://github.com/urschrei/pypolyline"
Tracker = "https://github.com/urschrei/pypolyline/issues"

[project.optional-dependencies]
test = ["pytest >= 7.4.2"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 45",
    "setuptools-scm[toml] >= 6.2",
    "numpy >= 2.0.0",
    "cython >= 0.29.0",
    "wheel >= 0.29.0",
]

[tool.pytest.ini_options]
minversion = "6.2.2"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]

[tool.setuptools_scm]
write_to = "src/_version.py"

